--- a/FavoriteBook/Base.lproj/Main.storyboard
+++ b/FavoriteBook/Base.lproj/Main.storyboard
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="1076" y="-69.715142428785612"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Book Form Table View Controller-->
         <scene sceneID="GiU-dc-D5q">
             <objects>
-                <tableViewController id="NSb-wP-jxo" sceneMemberID="viewController">
+                <tableViewController id="NSb-wP-jxo" customClass="BookFormTableViewController" customModule="FavoriteBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="E1T-iJ-VzC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -189,7 +189,7 @@
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCx-Ty-s6j">
                                                     <rect key="frame" x="164" y="7" width="46" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Button"/>
+                                                    <state key="normal" title="Save"/>
                                                 </button>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -202,6 +202,13 @@
                             <outlet property="delegate" destination="NSb-wP-jxo" id="WQ9-D2-vFl"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="authorTextField" destination="CJq-z0-HGM" id="h9m-zb-lwG"/>
+                        <outlet property="genreTextField" destination="Don-ie-wFJ" id="uDg-fu-eOw"/>
+                        <outlet property="lengthTextField" destination="xii-39-0yr" id="oZD-tB-e1k"/>
+                        <outlet property="saveButton" destination="OCx-Ty-s6j" id="pLd-2R-rKs"/>
+                        <outlet property="titleTextField" destination="TSC-7I-f3s" id="PF9-zs-4et"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6NY-zU-CrL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
