--- a/FavoriteBook/Base.lproj/Main.storyboard
+++ b/FavoriteBook/Base.lproj/Main.storyboard
@@ -190,6 +190,9 @@
                                                     <rect key="frame" x="164" y="7" width="46" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Save"/>
+                                                    <connections>
+                                                        <action selector="saveButtonTapped:" destination="NSb-wP-jxo" eventType="touchUpInside" id="x1e-yX-7Wv"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -206,7 +209,6 @@
                         <outlet property="authorTextField" destination="CJq-z0-HGM" id="h9m-zb-lwG"/>
                         <outlet property="genreTextField" destination="Don-ie-wFJ" id="uDg-fu-eOw"/>
                         <outlet property="lengthTextField" destination="xii-39-0yr" id="oZD-tB-e1k"/>
-                        <outlet property="saveButton" destination="OCx-Ty-s6j" id="pLd-2R-rKs"/>
                         <outlet property="titleTextField" destination="TSC-7I-f3s" id="PF9-zs-4et"/>
                     </connections>
                 </tableViewController>
